Rework fixed nav to require height. Instead of dynamically applying height, which was adding complexity to the DOM, require a height. Additionally, spacing for the nav padding is now globally controlled by Bootstrap spacing utility.

--- a/src/components/flasherpants/style.scss
+++ b/src/components/flasherpants/style.scss
@@ -1,9 +1,5 @@
 :export {
-  navFixedModulePadding: $spacer;
-}
-
-[class*="erd_scroll_detection_container"] {
-  position: absolute;
+  spacersMap: #{$spacers};
 }
 
 :local(.nav-fixed-module) {
